# blameprompt

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  blameprompt-audit.md  install.ps1  install.sh
.github/actions/blameprompt/: action.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/commands/: analytics.rs  audit.rs  blame.rs  check_provenance.rs  checkpoint.rs  diff.rs  doctor.rs  github.rs  hackathon.rs  license_scan.rs  login.rs  mod.rs  prompt_injection.rs  rebase_notes.rs  record.rs  redact_test.rs  report.rs  search.rs  secret_rotation.rs  show.rs  staging.rs  supply_chain.rs  sync.rs  sync_cloud.rs  uninstall.rs  update.rs  vuln_scan.rs
src/core/: api_client.rs  config.rs  db.rs  mod.rs  model_classifier.rs  pricing.rs  prompt_eval.rs  receipt.rs  redact.rs  session_stats.rs  transcript.rs  util.rs
src/git/: hooks.rs  init_hooks.rs  mod.rs  notes.rs  wrap.rs
src/integrations/: agent_trace.rs  amp.rs  antigravity.rs  claude_hooks.rs  codex.rs  continue_ai.rs  copilot.rs  cursor.rs  droid.rs  gemini.rs  junie.rs  mod.rs  opencode.rs  rovo_dev.rs  windsurf.rs
