[package]
name = "blameprompt"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Gitblame but for prompts. Track AI-generated code provenance via Git Notes"
repository = "https://github.com/ekaanth/blameprompt"
keywords = ["git", "ai", "claude", "provenance", "blame"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1.11", features = ["v4"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }
regex = "1.10"
comfy-table = "7.1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.14"
